src/test/ui/ffi_returns_twice.stderr
error[E0724]: `#[ffi_returns_twice]` may only be used on foreign functions
  --> $DIR/ffi_returns_twice.rs:5:1
   |
LL | #[ffi_returns_twice] //~ ERROR `#[ffi_returns_twice]` may only be used on foreign functions
   | ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0724`.
